--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,14 @@
   <title>UploaderDemo</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag 'application.js' %>
-  <%= javascript_include_tag 'jquery.js' %>
+  <!--<%= javascript_include_tag 'jquery-1.4.4.min.js' %>-->
+  <!--<%= javascript_include_tag 'jquery-ui-1.8.10.custom.min.js' %>-->
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script>
+
+  <%= javascript_include_tag 'jquery.fileupload.js' %>
+  <%= javascript_include_tag 'jquery.fileupload-ui.js' %>
   <%= csrf_meta_tag %>
 </head>
 <body>
